--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -337,8 +337,8 @@
             $("#count").val(1);
             getPrefer();
 {#            setSum();#}
-            $('#locpicker').val('{{ serverstop[0].name }}');
-            serverstop = {{ serverstop[0].id }};
+{#            $('#locpicker').val('{{ serverstop[0].name }}');#}
+{#            serverstop = {{ serverstop[0].id }};#}
         });
         translateCallback = function (data) {
             if (data.status === 0) {
