--- a/CarWechat/app/templates/agent/depart.html
+++ b/CarWechat/app/templates/agent/depart.html
@@ -4,169 +4,236 @@
         .container {
             padding: 20px;
         }
+
+        .weui-wepay-details__bd {
+            border-bottom: 1.5px solid #ddd;
+        }
     </style>
 {% endblock %}
 {% block content %}
-    <div class="weui-wepay-details">
+<div class="weui-wepay-details">
+    <div class="weui-wepay-details__hd">
+        <div class="weui-wepay-details__state">
+            <h2 class="weui-wepay-details__title">
+                待发车</h2>
+            <p class="weui-wepay-details__desc">￥{{ data.totalfee/100 }}</p>
+        </div>
+    </div>
+    <div class="weui-wepay-details__bd">
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">单号：</div>
+            <div class="weui-wepay-detail__ft">{{ data.tradeno |cutstring }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">代理：</div>
+            <div class="weui-wepay-detail__ft">{{ data.Serverstop.User.name }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">客户：</div>
+            <div class="weui-wepay-detail__ft">{{ data.Customer.name }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">客户电话：</div>
+            <div class="weui-wepay-detail__ft">{{ data.Customer.phone }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">服务点：</div>
+            <div class="weui-wepay-detail__ft">{{ data.Serverstop.name }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">时间：</div>
+            <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">支付状态：</div>
+            <div class="weui-wepay-detail__ft">{{ orderConfig[data.status][0] }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">车型：</div>
+            <div class="weui-wepay-detail__ft">{{ data.Cartype.name }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">天数：</div>
+            <div class="weui-wepay-detail__ft">{{ data.count }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">折扣：</div>
+            <div class="weui-wepay-detail__ft">-￥{{ data.cutfee/100 }}</div>
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">保险：</div>
+            {% if data.Insure %}
+                <div class="weui-wepay-detail__ft">{{ data.Insure.name }}:￥{{ data.insurefee/100 }}</div>
+            {% else %}
+                <div class="weui-wepay-detail__ft">无</div>
+            {% endif %}
+        </div>
+        <div class="weui-wepay-detail">
+            <div class="weui-wepay-detail__bd">总价：</div>
+            <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ data.totalfee/100 }}</div>
+        </div>
+
+    </div>
+    {#        {% if data.status=="ok" %}#}
+    {#            <div class="weui-wepay-details__ft">#}
+    {#                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>#}
+    {#            </div>#}
+    {##}
+    {#        {% endif %}#}
+    {% for o in continueOrders %}
         <div class="weui-wepay-details__hd">
             <div class="weui-wepay-details__state">
                 <h2 class="weui-wepay-details__title">
-                    待发车</h2>
-                <p class="weui-wepay-details__desc">￥{{ data.totalfee/100 }}</p>
+                    续租订单</h2>
+                <p class="weui-wepay-details__desc">￥{{ o.totalfee/100 }}</p>
             </div>
         </div>
         <div class="weui-wepay-details__bd">
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">单号：</div>
-                <div class="weui-wepay-detail__ft">{{ data.tradeno |cutstring }}</div>
+                <div class="weui-wepay-detail__ft">{{ o.tradeno |cutstring }}</div>
             </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">代理：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Serverstop.User.name }}</div>
-            </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">客户：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Customer.name }}</div>
-            </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">客户电话：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Customer.phone }}</div>
-            </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">服务点：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Serverstop.name }}</div>
-            </div>
+
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">时间：</div>
-                <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+                <div class="weui-wepay-detail__ft">{{ o.created_at }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">支付状态：</div>
-                <div class="weui-wepay-detail__ft">{{ orderConfig[data.status][0] }}</div>
+                <div class="weui-wepay-detail__ft">{{ orderConfig[o.status][0] }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">车型：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Cartype.name }}</div>
-            </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">车牌：</div>
-                <div class="weui-wepay-detail__ft">{{ data.Car.name }}</div>
+                <div class="weui-wepay-detail__ft">{{ o.Cartype.name }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">天数：</div>
-                <div class="weui-wepay-detail__ft">{{ data.count }}</div>
+                <div class="weui-wepay-detail__ft">{{ o.count }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">折扣：</div>
-                <div class="weui-wepay-detail__ft">-￥{{ data.cutfee/100 }}</div>
+                <div class="weui-wepay-detail__ft">-￥{{ o.cutfee/100 }}</div>
             </div>
-            <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">保险：</div>
-                {% if data.Insure %}
-                    <div class="weui-wepay-detail__ft">{{ data.Insure.name }}:￥{{ data.insurefee/100 }}</div>
-                {% else %}
-                    <div class="weui-wepay-detail__ft">无</div>
-                {% endif %}
-            </div>
+
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">总价：</div>
-                <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ data.totalfee/100 }}</div>
+                <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ o.totalfee/100 }}</div>
             </div>
 
         </div>
-        {#        {% if data.status=="ok" %}#}
-        {#            <div class="weui-wepay-details__ft">#}
-        {#                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>#}
-        {#            </div>#}
-        {##}
-        {#        {% endif %}#}
+    {% endfor %}
+    {% if  continueOrders %}
+        <div class="weui-wepay-details__hd cohead">
+            <div class="weui-wepay-details__state">
+                <h2 class="weui-wepay-details__title">
+
+                    <i class="weui-wepay-details__icon weui-icon-success"></i>
+                    总计
+
+                </h2>
+            </div>
+        </div>
+        <div class="weui-wepay-details__bd">
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">起始日期</div>
+                <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">总价</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.priceSum/100 }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">订单总天数</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.countSum }}</div>
+            </div>
+        </div>
+    {% endif %}
+</div>
+
+<div class="weui-cells__title">发车登记</div>
+<div class="weui-cells weui-cells_form">
+
+    <div class="weui-cell">
+        <div class="weui-cell__hd">
+            <label class="weui-label">车牌号</label>
+        </div>
+        <div class="weui-cell__bd">
+            <input class="weui-input" type="text" placeholder="选择车牌号" id="carCode"
+                   readonly>
+        </div>
     </div>
-    <div class="weui-cells__title">发车登记</div>
-    <div class="weui-cells weui-cells_form">
 
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">车牌号</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="选择车牌号" id="carCode"
-                       readonly>
-            </div>
+
+    <div class="weui-cell">
+
+        <div class="weui-cell__hd"><label for="" class="weui-label">发车时间</label></div>
+        <div class="weui-cell__bd">
+            <input class="weui-input" type="datetime-local" value="" placeholder="" id="depart_time">
         </div>
+    </div>
 
-
-        <div class="weui-cell">
-
-            <div class="weui-cell__hd"><label for="" class="weui-label">发车时间</label></div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="datetime-local" value="" placeholder="" id="depart_time">
-            </div>
-        </div>
-
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">发车油量</label></div>
-            <div class="weui-cell__bd">
-                <div class="weui-slider-box">
-                    <div class="weui-slider">
-                        <div class="weui-slider__inner">
-                            <div style="width: 50%;" class="weui-slider__track"></div>
-                            <div style="left: 50%;" class="weui-slider__handler"></div>
-                        </div>
+    <div class="weui-cell">
+        <div class="weui-cell__hd"><label class="weui-label">发车油量</label></div>
+        <div class="weui-cell__bd">
+            <div class="weui-slider-box">
+                <div class="weui-slider">
+                    <div class="weui-slider__inner">
+                        <div style="width: 50%;" class="weui-slider__track"></div>
+                        <div style="left: 50%;" class="weui-slider__handler"></div>
                     </div>
-                    <div class="weui-slider-box__value" id="oil">5</div>
                 </div>
+                <div class="weui-slider-box__value" id="oil">5</div>
             </div>
         </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">发车公里 </label></div>
+    </div>
+    <div class="weui-cell">
+        <div class="weui-cell__hd"><label class="weui-label">发车公里 </label></div>
 
-            <div class="weui-cell__bd">
-                <input id="kmbefore" class="weui-input" type="text" placeholder="发车公里/km"/>
-            </div>
-
+        <div class="weui-cell__bd">
+            <input id="kmbefore" class="weui-input" type="text" placeholder="发车公里/km"/>
         </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">合同编号 </label></div>
-
-            <div class="weui-cell__bd">
-                <input id="contractId" class="weui-input" type="text" placeholder="请输入合同编号"/>
-            </div>
-
-        </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">是否出省</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="是否出省" id="isOutProvince"
-                       readonly>
-            </div>
-        </div>
-        {#        <div class="weui-uploader">#}
-        {#            <div class="weui-uploader__hd">#}
-        {#                <p class="weui-uploader__title">存证上传</p>#}
-        {#            </div>#}
-        {#            <div class="weui-uploader__bd">#}
-        {#                <ul class="weui-uploader__files" id="uploaderFiles">#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                </ul>#}
-        {#                <div class="weui-uploader__input-box">#}
-        {#                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple/>#}
-        {#                </div>#}
-        {#            </div>#}
-        {#        </div>#}
-
 
     </div>
+    <div class="weui-cell">
+        <div class="weui-cell__hd"><label class="weui-label">合同编号 </label></div>
 
+        <div class="weui-cell__bd">
+            <input id="contractId" class="weui-input" type="text" placeholder="请输入合同编号"/>
+        </div>
 
-
-
-    <div class="weui-btn-area">
-        <a class="weui-btn weui-btn_primary" href="javascript:" id="depart">确定</a>
     </div>
+    <div class="weui-cell">
+        <div class="weui-cell__hd">
+            <label class="weui-label">是否出省</label>
+        </div>
+        <div class="weui-cell__bd">
+            <input class="weui-input" type="text" placeholder="是否出省" id="isOutProvince"
+                   readonly>
+        </div>
+    </div>
+    {#        <div class="weui-uploader">#}
+    {#            <div class="weui-uploader__hd">#}
+    {#                <p class="weui-uploader__title">存证上传</p>#}
+    {#            </div>#}
+    {#            <div class="weui-uploader__bd">#}
+    {#                <ul class="weui-uploader__files" id="uploaderFiles">#}
+    {#                    <li class="weui-uploader__file"></li>#}
+    {#                    <li class="weui-uploader__file"></li>#}
+    {#                    <li class="weui-uploader__file"></li>#}
+    {#                </ul>#}
+    {#                <div class="weui-uploader__input-box">#}
+    {#                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple/>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </div>#}
+
+
+</div>
+
+
+<div class="weui-btn-area">
+    <a class="weui-btn weui-btn_primary" href="javascript:" id="depart">确定</a>
+</div>
 
 
 {% endblock %}
