--- a/CarWechat/app/templates/agent/orderDetail.html
+++ b/CarWechat/app/templates/agent/orderDetail.html
@@ -130,6 +130,75 @@
                 <div class="weui-wepay-detail__ft">{% if data.outprovince==1 %}是{% else %}否{% endif %}</div>
             </div>
         </div>
+        {% for o in continueOrders %}
+            <div class="weui-wepay-details__hd">
+                <div class="weui-wepay-details__state">
+                    <h2 class="weui-wepay-details__title">
+                        续租订单</h2>
+                    <p class="weui-wepay-details__desc">￥{{ data.totalfee/100 }}</p>
+                </div>
+            </div>
+            <div class="weui-wepay-details__bd">
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">单号：</div>
+                    <div class="weui-wepay-detail__ft">{{ data.tradeno |cutstring }}</div>
+                </div>
+
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">服务点：</div>
+                    <div class="weui-wepay-detail__ft">{{ data.Serverstop.name }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">时间：</div>
+                    <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">支付状态：</div>
+                    <div class="weui-wepay-detail__ft">{{ orderConfig[data.status][0] }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">天数：</div>
+                    <div class="weui-wepay-detail__ft">{{ data.count }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">折扣：</div>
+                    <div class="weui-wepay-detail__ft">-￥{{ data.cutfee/100 }}</div>
+                </div>
+
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">总价：</div>
+                    <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ data.totalfee/100 }}</div>
+                </div>
+
+            </div>
+
+        {% endfor %}
+        {% if  continueOrders %}
+            <div class="weui-wepay-details__hd cohead">
+                <div class="weui-wepay-details__state">
+                    <h2 class="weui-wepay-details__title">
+
+                        <i class="weui-wepay-details__icon weui-icon-success"></i>
+                        总计
+
+                    </h2>
+                </div>
+            </div>
+            <div class="weui-wepay-details__bd">
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">起始日期</div>
+                    <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">总价</div>
+                    <div class="weui-wepay-detail__ft">{{ OrderSumData.priceSum/100 }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">订单总天数</div>
+                    <div class="weui-wepay-detail__ft">{{ OrderSumData.countSum }}</div>
+                </div>
+            </div>
+        {% endif %}
         {#        {% if data.status=="ok" %}#}
         {#            <div class="weui-wepay-details__ft">#}
         {#                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>#}
