--- a/CarWechat/app/templates/car/orderDetail.html
+++ b/CarWechat/app/templates/car/orderDetail.html
@@ -22,6 +22,14 @@
         .ui-spinner {
             width: 50% !important;
         }
+
+        .weui-wepay-details__bd {
+            border-bottom: 1.5px solid #ddd;
+        }
+
+        .cohead {
+
+        }
     </style>
 {% endblock %}
 {% block content %}
@@ -75,9 +83,87 @@
             </div>
 
         </div>
+        {% for o in continueOrders %}
+            <div class="weui-wepay-details__hd cohead">
+                <div class="weui-wepay-details__state">
+                    <h2 class="weui-wepay-details__title">
+
+                        <i class="weui-wepay-details__icon weui-icon-success"></i>
+                        已支付——续租单
+                        <p class="weui-wepay-details__desc">￥{{ o.totalfee/100 }}</p>
+                    </h2>
+                </div>
+            </div>
+            <div class="weui-wepay-details__bd">
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">单号：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.tradeno |cutstring }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">时间：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">订单状态：</div>
+                    <div class="weui-wepay-detail__ft">{{ orderConfig[o.status][0] }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">车型：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.Cartype.name }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">天数：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.count }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">折扣：</div>
+                    <div class="weui-wepay-detail__ft">-￥{{ o.cutfee/100 }}</div>
+                </div>
+
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">总价：</div>
+                    <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ o.totalfee/100 }}</div>
+                </div>
+
+            </div>
+        {% endfor %}
+        {% if  continueOrders %}
+            <div class="weui-wepay-details__hd cohead">
+                <div class="weui-wepay-details__state">
+                    <h2 class="weui-wepay-details__title">
+
+                        <i class="weui-wepay-details__icon weui-icon-success"></i>
+                        总计
+
+                    </h2>
+                </div>
+            </div>
+            <div class="weui-wepay-details__bd">
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">起始日期</div>
+                    <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">总价</div>
+                    <div class="weui-wepay-detail__ft">{{ OrderSumData.priceSum/100 }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">订单总天数</div>
+                    <div class="weui-wepay-detail__ft">{{ OrderSumData.countSum }}</div>
+                </div>
+            </div>
+        {% endif %}
         {% if data.status=="ok" %}
+                {% if  not data.todate %}
+                    <div class="weui-wepay-details__ft">
+                        <a href="/wx/cart/{{ data.Cartype.id }}?isContinue=true&orderid={{ data.id }}"
+                           class="weui-btn weui-btn_primary" id="continue">续租</a>
+                    </div>
+                {% endif %}
+
+
             <div class="weui-wepay-details__ft">
-                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>
+                <a href="javascript:;" class="weui-btn weui-btn_default" id="refund">申请退款</a>
             </div>
 
         {% endif %}
