--- a/CarWechat/app/static/css/main.css
+++ b/CarWechat/app/static/css/main.css
@@ -5,28 +5,34 @@ html {
 body {
     height: 100%;
 }
-.weui-picker__item{
+
+.weui-picker__item {
     padding-top: 0;
     padding-bottom: 0;
- }
+}
+
 .card .card-content .card-title {
-    font-size: 14px!important;
+    font-size: 14px !important;
 }
-.weui-tabbar{
-    position: fixed!important;
+
+.weui-tabbar {
+    position: fixed !important;
 }
-#tabitem{
-    position: fixed!important;
+
+#tabitem {
+    position: fixed !important;
 }
-.weui-tab__content{
+
+.weui-tab__content {
     padding-bottom: 50px;
 }
+
 .card .card-content {
-    text-align: center!important;
-    padding-top: 12px!important;
-    padding-right: 0!important;
-    padding-bottom: 3px!important;
-    padding-left: 0!important;
+    text-align: center !important;
+    padding-top: 12px !important;
+    padding-right: 0 !important;
+    padding-bottom: 3px !important;
+    padding-left: 0 !important;
 }
 
 .weui-tab__panel {
@@ -37,11 +43,13 @@ body {
     padding: 30px;
     font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
 }
-.page__title{
+
+.page__title {
     text-align: left;
     font-size: 20px;
     font-weight: 400;
 }
+
 .row .col {
     padding-top: 0px;
     padding-right: 0.35rem;
@@ -97,4 +105,5 @@ nav .brand-logo {
 
 .greyWords {
     color: grey;
+    font-size: 18px;
 }
