--- a/CarWechat/app/templates/agent/accident.html
+++ b/CarWechat/app/templates/agent/accident.html
@@ -15,7 +15,7 @@
 
         <div class="weui-cell">
             <div class="weui-cell__hd">
-                <label class="weui-label">车型</label>
+                <label class="weui-label">*车型</label>
             </div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="text" placeholder="选择车型" id="carType"
@@ -24,7 +24,7 @@
         </div>
         <div class="weui-cell">
             <div class="weui-cell__hd">
-                <label class="weui-label">车牌号</label>
+                <label class="weui-label">*车牌号</label>
             </div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="text" placeholder="选择车牌号" id="carCode"
@@ -34,7 +34,7 @@
 
         <div class="weui-cell">
 
-            <div class="weui-cell__hd"><label for="" class="weui-label">时间</label></div>
+            <div class="weui-cell__hd"><label for="" class="weui-label">*时间</label></div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="datetime-local" value="" placeholder="" id="created_at">
             </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="weui-cell">
             <div class="weui-cell__hd">
-                <label class="weui-label">理赔金额</label>
+                <label class="weui-label">*理赔金额</label>
             </div>
             <div class="weui-cell__bd">
                 <input class="weui-input" type="number" placeholder="理赔金额" id="isureprice"
