--- a/CarWechat/app/templates/agent/order.html
+++ b/CarWechat/app/templates/agent/order.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="weui-cell__bd">
                             <div class="weui-cell__title">
-                                {{ d.Cartype.name }}
+                                {{ d.Cartype.name }}<br>
                                 {% if d.status=="ok" and d.hascontinue==1 %}
                                     <span class="weui-badge" style="margin-left: 5px;">含续租单</span>
                                 {% endif %}
