--- a/CarWechat/app/templates/car/order.html
+++ b/CarWechat/app/templates/car/order.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="weui-cell__bd">
                             <div class="weui-cell__title">
-                                <span>{{ d.Cartype.name }}</span>
+                                <span>{{ d.Cartype.name }}</span><br>
                                 {% if d.status=="ok" and d.hascontinue==1 %}
                                     <span class="weui-badge" style="margin-left: 5px;">含续租单</span>
                                 {% endif %}
