--- a/CarWechat/app/templates/car/cart.html
+++ b/CarWechat/app/templates/car/cart.html
@@ -183,12 +183,12 @@
             $("#sum").css("color", 'red');
         });
         function setInsure(obj) {
-            setSum();
+            getPrefer();
         }
         function setSum(v) {
             {#            var v = (100*($("#count").val() * ($("#price").text() * 1.0 + $('input[name="radio1"]:checked').attr("price") / 100.0)) - Math.abs($("#cutfee").text() * 100))/100;#}
             var value = v + ($("#count").val() * $('input[name="radio1"]:checked').attr("price") ) / 100.0;
-            $("#totalfee-top").html('￥' + v);
+            $("#totalfee-top").html('￥' + value);
             $("#sum").html(value)
         }
         function getPrefer() {
