--- a/CarWechat/app/templates/agentbase.html
+++ b/CarWechat/app/templates/agentbase.html
@@ -26,15 +26,15 @@
             <img src="{{ url_for('static',filename='img/订单.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">收发车</p>
         </a>
-        <a href="{{ url_for('agentweb.accident') }}" class="weui-tabbar__item" id="nav-map">
+        <a href="{{ url_for('agentweb.accident') }}" class="weui-tabbar__item" id="nav-accident">
             <img src="{{ url_for('static',filename='img/交通事故.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">事故</p>
         </a>
-        <a href="{{ url_for('agentweb.move') }}" class="weui-tabbar__item" id="nav-profile">
+        <a href="{{ url_for('agentweb.move') }}" class="weui-tabbar__item" id="nav-move">
             <img src="{{ url_for('static',filename='img/人事调动.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">调动</p>
         </a>
-        <a href="{{ url_for('agentweb.apply') }}" class="weui-tabbar__item" id="nav-profile">
+        <a href="{{ url_for('agentweb.apply') }}" class="weui-tabbar__item" id="nav-apply">
             <img src="{{ url_for('static',filename='img/申请 审批.png') }}" alt="" class="weui-tabbar__icon">
             <p class="weui-tabbar__label">用车申请</p>
         </a>
