--- a/CarWechat/app/templates/agent/move.html
+++ b/CarWechat/app/templates/agent/move.html
@@ -4,316 +4,95 @@
         .container {
             padding: 20px;
         }
+
+        .collection-item {
+            height: 150px;
+        }
+
+        .green {
+            background-color: #4abb44 !important;
+        }
     </style>
 {% endblock %}
 {% block content %}
-    <div class="weui-cells__title"> 车辆调动</div>
-    <div class="weui-cells weui-cells_form">
+    <div class="weui-wepay-lists">
+        <div class="weui-btn-area">
+            <a class="weui-btn weui-btn_primary" href="{{ url_for('agentweb.moveNew') }}" id="move">登记调车</a>
+        </div>
+        <div class="weui-wepay-lists__bd">
+            <div class="weui-cells">
+                {% if data|count==0 %}
+                    <p style="color: gray;text-align: center">对不起，您还没有调车记录</p>
 
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">车型</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="选择车型" id="carType"
-                       readonly value="">
+                {% endif %}
+                {% for d in data %}
+                    <a href="{{ url_for('agentweb.moveDetail',id=d.id) }}" class="weui-cell weui-cell_primary">
+                        <div class="weui-cell__hd">
+                            <img src="{{ imgDomain }}{{ d.Car.Cartype.img }}!fang" alt="" width="34" height="34">
+
+                        </div>
+                        <div class="weui-cell__bd">
+                            <div class="weui-cell__title">
+                                {{ d.Car.Cartype.name }}<br>
+                                {% if not d.toid or not d.tokm %}
+                                    <span class="weui-badge" style="margin-left: 5px;">待补充</span>
+                                {% endif %}
+
+                            </div>
+                            <div class="weui-cell__info">
+                                {{ d.created_at }}<br>
+                                {{ d.Car.name }}<br>
+
+                            </div>
+                        </div>
+                        <div class="weui-cell__ft">
+
+                            <div class="weui-cell__title weui-wepay-color-green">
+
+                            </div>
+
+                            <div class="weui-cell__info">
+                                {{ d.User.name }}
+                            </div>
+                        </div>
+
+                    </a>
+                {% endfor %}
             </div>
         </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">车牌号</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="选择车牌号" id="carCode"
-                       readonly value="">
-            </div>
-        </div>
-        <div class="weui-cell">
-
-            <div class="weui-cell__hd"><label for="" class="weui-label">时间</label></div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="datetime-local" value="" placeholder="" id="created_at">
-            </div>
-        </div>
-
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">从...</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="从..." id="fromid"
-                       readonly>
-            </div>
-        </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">到...</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="到..." id="toid"
-                       readonly>
-            </div>
-        </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">发车里程</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="number" placeholder="发车里程" id="fromkm"
-                       >
-            </div>
-        </div>
-        <div class="weui-cell">
-            <div class="weui-cell__hd">
-                <label class="weui-label">到达里程</label>
-            </div>
-            <div class="weui-cell__bd">
-                <input class="weui-input" type="text" placeholder="到达里程" id="tokm"
-                       >
-            </div>
-        </div>
-
-
-        {#        <div class="weui-uploader">#}
-        {#            <div class="weui-uploader__hd">#}
-        {#                <p class="weui-uploader__title">存证上传</p>#}
-        {#            </div>#}
-        {#            <div class="weui-uploader__bd">#}
-        {#                <ul class="weui-uploader__files" id="uploaderFiles">#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                </ul>#}
-        {#                <div class="weui-uploader__input-box">#}
-        {#                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple/>#}
-        {#                </div>#}
-        {#            </div>#}
-        {#        </div>#}
-
-
     </div>
-
-
-
-
-    <div class="weui-btn-area">
-        <a class="weui-btn weui-btn_primary" href="javascript:" id="move">确定</a>
-    </div>
-
-
+    {#    <div class="container">#}
+    {#        <ul class="collection">#}
+    {#            {% for d in data %}#}
+    {#                <li class="collection-item avatar">#}
+    {#                    <img src="{{ imgDomain }}{{ d.Cartype.img }}!fang" alt="" class="circle">#}
+    {#                    <span class="title">{{ d.Cartype.name }}</span>#}
+    {#                    <p>订单金额：{{ d.totalfee/100 }} 元</p>#}
+    {#                    <p>生成时间：{{ d.created_at }}</p>#}
+    {#                    <p class="truncate">订单编号：{{ d.tradeno }}</p>#}
+    {#                    <p style="color: {{ orderConfig[d.status][2] }}">#}
+    {#                        订单状态：{{ orderConfig[d.status][0] }}#}
+    {#                    </p>#}
+    {##}
+    {#                    <a class="dropdown-button secondary-content" data-activates='dropdown{{ loop.index }}'><i#}
+    {#                            class="material-icons">list</i></a>#}
+    {#                    <ul id='dropdown{{ loop.index }}' class='dropdown-content'>#}
+    {#                        {% for o in orderConfig[d.status][1] %}#}
+    {#                            <li><a href="{{ url_for('web.orderDetail',id=d.id) }}">{{ o }}</a></li>#}
+    {#                        {% endfor %}#}
+    {#                    </ul>#}
+    {#                </li>#}
+    {#            {% endfor %}#}
+    {##}
+    {#        </ul>#}
+    {#    </div>#}
 {% endblock %}
 {% block script %}
     <script>
-        weui.uploader('#uploader', {
-            url: 'http://localhost:8081',
-            auto: false,
-            type: 'file',
-            fileVal: 'fileVal',
-            compress: {
-                width: 1600,
-                height: 1600,
-                quality: 1
-            },
-            onBeforeQueued: function (files) {
-                // `this` 是轮询到的文件, `files` 是所有文件
-
-                if (["image/jpg", "image/jpeg", "image/png"].indexOf(this.type) < 0) {
-                    weui.alert('请上传图片');
-                    return false; // 阻止文件添加
-                }
-                if (this.size > 10 * 1024 * 1024) {
-                    weui.alert('请上传不超过10M的图片');
-                    return false;
-                }
-                if (files.length > 3) { // 防止一下子选择过多文件
-                    weui.alert('最多只能上传3张图片，请重新选择');
-                    return false;
-                }
-                if (uploadCount + 1 > 3) {
-                    weui.alert('最多只能上传3张图片');
-                    return false;
-                }
-
-                ++uploadCount;
-
-                // return true; // 阻止默认行为，不插入预览图的框架
-            },
-            onQueued: function () {
-                console.log(this);
-
-                // console.log(this.status); // 文件的状态：'ready', 'progress', 'success', 'fail'
-                // console.log(this.base64); // 如果是base64上传，file.base64可以获得文件的base64
-
-                // this.upload(); // 如果是手动上传，这里可以通过调用upload来实现；也可以用它来实现重传。
-                // this.stop(); // 中断上传
-
-                // return true; // 阻止默认行为，不显示预览图的图像
-            },
-            onBeforeSend: function (data, headers) {
-                console.log(this, data, headers);
-                // $.extend(data, { test: 1 }); // 可以扩展此对象来控制上传参数
-                // $.extend(headers, { Origin: 'http://127.0.0.1' }); // 可以扩展此对象来控制上传头部
-
-                // return false; // 阻止文件上传
-            },
-            onProgress: function (procent) {
-                console.log(this, procent);
-                // return true; // 阻止默认行为，不使用默认的进度显示
-            },
-            onSuccess: function (ret) {
-                console.log(this, ret);
-                // return true; // 阻止默认行为，不使用默认的成功态
-            },
-            onError: function (err) {
-                console.log(this, err);
-                // return true; // 阻止默认行为，不使用默认的失败态
-            }
-        });
-        var carid = "";
-        var cartype = "";
-        var cars = [];
-        var fromid = "";
-        var toid = "";
-        function getcars(id) {
-
-
-            var formData = new FormData();
-
-            formData.append('cartypeid', id);
-            $.ajax({
-                url: window.location.protocol + "//" + window.location.host + '/wx/api/agent/carsbycartype',
-                type: 'POST',
-                data: formData,
-                contentType: false,
-                processData: false,
-                success: function (result) {
-                    cars = result;
-
-                }
-
-            })
-
-        }
-        $('#carType').on('click', function () {
-
-            weui.picker([
-
-                {% for ct in cartypes %}
-                    {
-                        label: "{{ ct.name }}",
-                        value: {{ ct.id }}
-                    },
-                {% endfor %}
-            ], {
-                onChange: function (result) {
-
-                },
-                onConfirm: function (result) {
-                    $('#carType').val(result[0]['label']);
-                    cartype = result[0]['value'];
-                    getcars(cartype)
-                }
-            });
-        });
-        $('#fromid').on('click', function () {
-
-            weui.picker([
-
-                {% for st in serverstops %}
-                    {
-                        label: "{{ st.name }}",
-                        value: {{ st.id }}
-                    },
-                {% endfor %}
-            ], {
-                onChange: function (result) {
-
-                },
-                onConfirm: function (result) {
-                    $('#fromid').val(result[0]['label']);
-                    fromid = result[0]['value'];
-
-                }
-            });
-        });
-        $('#toid').on('click', function () {
-
-            weui.picker([
-
-                {% for sts in serverstops %}
-                    {
-                        label: "{{ sts.name }}",
-                        value: {{ sts.id }}
-                    },
-                {% endfor %}
-            ], {
-                onChange: function (result) {
-
-                },
-                onConfirm: function (result) {
-                    $('#toid').val(result[0]['label']);
-                    toid = result[0]['value'];
-
-                }
-            });
-        });
-        $('#carCode').on('click', function () {
-
-            weui.picker(cars, {
-                onChange: function (result) {
-
-                },
-                onConfirm: function (result) {
-                    $('#carCode').val(result[0]['label']);
-                    carid = result[0]['value'];
-                }
-            });
-        });
         $(document).ready(function () {
+            navSelect($('#nav-move'));
+        });
 
-            $('#move').click(function () {
-                {#                if (!$("#weuiAgree").prop("checked")) {#}
-                {#                    return#}
-                {#                }#}
 
-                var formData = new FormData();
-
-                formData.append('fromid', fromid);
-                formData.append('carid', carid);
-                formData.append('toid', toid);
-                formData.append('fromkm', $('#fromkm').val());
-                formData.append('tokm', $('#tokm').val());
-                formData.append('created_at', $('#created_at').val());
-
-                $.ajax({
-                    url: window.location.protocol + "//" + window.location.host + '/wx/api/agent/move',
-                    type: 'POST',
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    success: function (result) {
-                        if (result['status'] == 'lacked') {
-                            alert("信息填写有误");
-
-                        }
-
-                        if (result['status'] == 'ok') {
-                            alert('信息录入成功');
-                            window.location = "{{url_for('agentweb.order')}}"
-                        }
-                        if (result['status'] == 'error') {
-                            alert('权限错误');
-                            {#                            window.location = "{{url_for('web.selectCar')}}"#}
-                        }
-                        {#                        if (result['status'] == 'alert') {#}
-                        {#                            alert(result['msg']);#}
-                        {##}
-                        {#                        }#}
-                    }
-
-                })
-
-            });
-        })
     </script>
 {% endblock %}
