--- a/CarWechat/app/templates/car/orderDetail.html
+++ b/CarWechat/app/templates/car/orderDetail.html
@@ -140,8 +140,12 @@
             </div>
             <div class="weui-wepay-details__bd">
                 <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">起始日期</div>
+                    <div class="weui-wepay-detail__bd">下单日期</div>
                     <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">起始日期</div>
+                    <div class="weui-wepay-detail__ft">{{ data.fromdate }}</div>
                 </div>
                 <div class="weui-wepay-detail">
                     <div class="weui-wepay-detail__bd">总价</div>
